...
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:hint="@string/gameHint"
            android:ems="10"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Query">
    </EditText>

    <!--Note FAB with keyboard alignment and allowing keyboard only worked because of adding android:windowSoftInputMode="adjustResize" to Manifest-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@android:drawable/ic_menu_send"
            android:tint="@android:color/black"/>
...
