...
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

    <ImageButton
            android:layout_width="@dimen/addIconSize"
            android:layout_height="@dimen/addIconSize"
            android:background="@drawable/ic_btn_add"
            android:id="@+id/partyAddBtn"
            app:layout_constraintEnd_toEndOf="@+id/PartyCard"
            android:layout_marginEnd="46dp"
            app:layout_constraintTop_toTopOf="@+id/PartyCard" app:layout_constraintBottom_toBottomOf="@+id/PartyCard"/>

    <ImageButton
            android:layout_width="@dimen/addIconSize"
...
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="46dp"/>

    <ImageButton
            android:layout_width="@dimen/playIconSize"
            android:layout_height="@dimen/playIconSize"
            android:background="@drawable/ic_btn_play"
            android:id="@+id/partyPlayBtn" app:layout_constraintEnd_toEndOf="@+id/PartyCard"
            app:layout_constraintStart_toStartOf="@+id/PartyCard"
            app:layout_constraintTop_toBottomOf="@+id/partyTextView"
            app:layout_constraintHorizontal_bias="0.501"
    />

    <ImageView
...
