<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".ThemesActivity">

    <GridView
            android:id="@+id/grid_view_themes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="150dp"
            android:horizontalSpacing="15dp"
            android:verticalSpacing="15dp"
            android:numColumns="auto_fit"
            android:padding="15dp"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"/>

</LinearLayout>